--- a/src/layouts/Basic.astro
+++ b/src/layouts/Basic.astro
@@ -1,11 +1,12 @@
 ---
 import "@fontsource/inter";
+import "@fontsource/inter/700.css";
 import "@fontsource/jetbrains-mono";
 import "@styles/globals.css";
 
-import Navbar from "@components/Navbar.astro";
-import Footer from "@components/Footer.astro";
-import IconBar from "@components/IconBar.svelte";
+import Navbar from "@components/core/Navbar.astro";
+import Footer from "@components/core/Footer.astro";
+import IconBar from "@components/icons/IconBar.svelte";
 
 export interface Props {
   title: string;
