--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,10 +4,9 @@ import Basic from "@layouts/Basic.astro";
 
 <Basic title="Jake Pauls">
   <main>
-    <!-- todo: create lightning/name component -->
-    <h1 class="tw-font-heading tw-text-6xl">Jake Pauls</h1>
-    <h3 class="tw-text-white">Graphics Programmer</h3>
-    <code class="tw-font-code tw-text-white">This is a code block!</code>
+    <code class="tw-font-code tw-text-white"
+      >This is where the content starts.</code
+    >
   </main>
 </Basic>
 
