small changes, prepping to redo

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,9 +4,7 @@ import Basic from "@layouts/Basic.astro";
 
 <Basic title="Jake Pauls">
   <main>
-    <code class="tw-font-code tw-text-white"
-      >This is where the content starts.</code
-    >
+    <p class="tw-font-code tw-text-white">This is where the content starts</p>
   </main>
 </Basic>
 
@@ -15,5 +13,6 @@ import Basic from "@layouts/Basic.astro";
     margin: auto;
     padding: 1.5rem;
     max-width: 60ch;
+    text-align: center;
   }
 </style>
