--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,16 +3,12 @@ import Basic from "@layouts/Basic.astro";
 ---
 
 <Basic title="Jake Pauls">
-  <main>
-    <p class="tw-font-code tw-text-white">This is where the content starts</p>
+  <main class="tw-px-32 tw-py-8 tw-w-auto">
+    <!-- @TODO: Replace with content, current padding matches footer -->
+    <div class="tw-py-52">
+      <p class="tw-font-core-bold tw-text-6xl tw-text-base-content">
+        Hello, I'm Jake. 👋
+      </p>
+    </div>
   </main>
 </Basic>
-
-<style>
-  main {
-    margin: auto;
-    padding: 1.5rem;
-    max-width: 60ch;
-    text-align: center;
-  }
-</style>
