--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -29,6 +29,16 @@
   .tw-font-code {
     font-family: "JetBrains Mono", monospace;
   }
+
+  .tw-text-xxs {
+    font-size: 0.625rem; /* 10px */
+    line-height: 0.875rem; /* 14px */
+  }
+
+  .tw-text-xxxs {
+    font-size: 0.5rem; /* 8px */
+    line-height: 0.625rem; /* 10px */
+  }
 }
 
 /* Custom CSS */
