Abstracted out the content on the current 'Basic' page, removed navbar links and moved resume to a social icon

--- a/src/components/core/Navbar.astro
+++ b/src/components/core/Navbar.astro
@@ -2,26 +2,10 @@
 import { BsLightningChargeFill } from "svelte-icons-pack/bs";
 
 import IconButton from "@components/icons/IconButton.svelte";
-import { links } from "@data/links";
 ---
 
 <div class="tw-flex">
-  <div class="tw-navbar tw-justify-end">
+  <div class="tw-navbar tw-justify-start">
     <IconButton src={BsLightningChargeFill} color="yellow" isGhost={false} href="#" /> 
-    <!--
-    @note: I'll likely forget why this works, cause... CSS 🫠
-    Reference: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_flexible_box_layout/Aligning_items_in_a_flex_container#using_auto_margins_for_main_axis_alignment 
-    -->
-    <div class="tw-ml-auto">
-      <ul class="md:tw-menu-horizontal md:tw-space-x-4">
-        <li><a href={links.resume}>resume</a></li>
-      </ul>
-    </div>
   </div>
 </div>
-
-<style>
-  a:hover {
-    text-decoration: underline;
-  }
-</style>
