--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,10 @@
 ---
 import Basic from "@layouts/Basic.astro";
+import Content from "@components/core/Content.astro";
 ---
 
 <Basic title="Jake Pauls">
-  <main class="tw-px-32 tw-py-8 tw-w-auto">
-    <!-- @TODO: Replace with content, current padding matches footer -->
-    <div class="tw-py-52">
-      <p class="tw-font-core-bold tw-text-6xl tw-text-base-content">
-        Hello, I'm Jake. 👋
-      </p>
-    </div>
+  <main class="tw-px-32 tw-py-60 tw-w-auto">
+      <Content />
   </main>
 </Basic>
