Added tooltips for social icons, fixed sizing of social icons, fixed bug with lightning icon

--- a/src/components/core/Content.astro
+++ b/src/components/core/Content.astro
@@ -17,6 +17,6 @@ TODO: Play with this margin-bottom number, it'll push the content below the hero
     </p>
   </div>
   <div class="tw-mt-12 tw-mb-3">
-    <SocialIconBar size="3rem" isGhost={true} />
+    <SocialIconBar size="2rem" showTooltips={true} class="tw-space-x-8" />
   </div>
 </div>
