--- a/src/components/core/Footer.astro
+++ b/src/components/core/Footer.astro
@@ -10,7 +10,7 @@ import { Constants } from "@data/constants";
     <div class="tw-flex-1">
       <Logo showLocation={true} />
       <div class="tw-mt-6">
-        <SocialIconBar size="1.25rem" />
+        <SocialIconBar size="1.25rem" class="tw-space-x-4" />
       </div>
     </div>
     <div>
