--- a/src/components/core/Navbar.astro
+++ b/src/components/core/Navbar.astro
@@ -6,6 +6,6 @@ import IconButton from "@components/icons/IconButton.svelte";
 
 <div class="tw-flex">
   <div class="tw-navbar tw-justify-start">
-    <IconButton src={BsLightningChargeFill} color="yellow" isGhost={false} href="#" /> 
+    <IconButton src={BsLightningChargeFill} color="yellow" href="#" isExternal={false} /> 
   </div>
 </div>
