--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Content from "@components/core/Content.astro";
 ---
 
 <Basic title="Jake Pauls">
-  <main class="tw-px-32 tw-py-48 tw-w-auto">
+  <main>
     <Content />
   </main>
 </Basic>
