--- a/src/layouts/Basic.astro
+++ b/src/layouts/Basic.astro
@@ -1,12 +1,9 @@
 ---
 import "@fontsource/inter";
 import "@fontsource/inter/700.css"
-import "@fontsource/chivo/700.css"
-import "@fontsource/chivo/700-italic.css"
 import "@fontsource/jetbrains-mono";
 import "@styles/globals.css";
 
-import Navbar from "@components/core/Navbar.astro";
 import Footer from "@components/core/Footer.astro";
 
 export interface Props {
@@ -26,15 +23,14 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body class="tw-bg-base-100">
-    <div class="tw-flex tw-flex-col tw-px-12 tw-pt-12">
-      <div class="tw-w-full">
-        <Navbar />
-      </div>
-      <div>
+  <body class="tw-min-h-screen tw-flex tw-justify-center tw-items-center">
+    <div class="tw-flex tw-flex-col tw-space-y-4 tw-max-w-2xl tw-w-full tw-p-4">
+      <div class="tw-flex tw-justify-center tw-items-center md:tw-p-2">
         <slot />
       </div>
-      <Footer />
+      <div class="tw-flex tw-justify-center tw-items-center md:tw-p-2">
+        <Footer />
       </div>
+    </div>
   </body>
 </html>
