--- a/src/layouts/Basic.astro
+++ b/src/layouts/Basic.astro
@@ -23,7 +23,7 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body class="tw-min-h-screen tw-flex tw-justify-center tw-items-center">
+  <body class="tw-min-h-min tw-flex tw-justify-center tw-items-center">
     <div class="tw-flex tw-flex-col tw-space-y-4 tw-max-w-2xl tw-w-full tw-p-4">
       <div class="tw-flex tw-justify-center tw-items-center md:tw-p-2">
         <slot />
