Added link for Larian Quebec

--- a/src/components/core/Content.astro
+++ b/src/components/core/Content.astro
@@ -24,7 +24,7 @@ import { BsLightningChargeFill } from "svelte-icons-pack/bs";
   </div>
   <div class="tw-my-2">
     <p class="tw-font-core tw-text-lg md:tw-text-xl tw-text-base-content">
-      i&apos;m a tools programmer based in québec city currently working at larian studios. i&apos;m interested in game engines, creative workflows, and custom technology.
+      i&apos;m a tools programmer based in québec city currently working at <Link href={personalLinks.larian}>larian studios</Link>. i&apos;m interested in game engines, creative workflows, and custom technology.
     </p>
   </div>
   <div class="tw-my-2">
