Capitalized website content, removed roles and extra BG3 card from projects

--- a/src/components/core/Content.astro
+++ b/src/components/core/Content.astro
@@ -24,18 +24,18 @@ import { BsLightningChargeFill } from "svelte-icons-pack/bs";
   </div>
   <div class="tw-my-2">
     <p class="tw-font-core tw-text-lg md:tw-text-xl tw-text-base-content">
-      i&apos;m a tools programmer based in québec city currently working at <Link href={personalLinks.larian}>larian studios</Link>. i&apos;m interested in game engines, creative workflows, and custom technology.
+      I&apos;m a tools programmer based in Québec City currently working at <Link href={personalLinks.larian}>Larian Studios</Link>. I&apos;m interested in game engines, creative workflows, and custom technology.
     </p>
   </div>
   <div class="tw-my-2">
     <p class="tw-font-core tw-text-lg md:tw-text-xl tw-text-base-content">
-      here are some of the cool things i&apos;ve worked on professionally:
+      Here are some of the cool things I&apos;ve worked on professionally:
     </p>
   </div>
   <ProjectCards />
   <div class="tw-my-2">
     <p class="tw-font-core tw-text-lg md:tw-text-xl tw-text-base-content">
-      in my free time i make games and participate in game jams. feel free to check out my <Link href={personalLinks.itchio}>itch</Link> or <Link href={personalLinks.github}>github</Link> for those.
+      In my free time I make games and participate in game jams. Feel free to check out my <Link href={personalLinks.itchio}>Itch</Link> or <Link href={personalLinks.github}>GitHub</Link> for those.
     </p>
   </div>
 </section>
