--- a/src/components/core/ProjectCards.astro
+++ b/src/components/core/ProjectCards.astro
@@ -2,15 +2,13 @@
 import { Image } from "astro:assets";
 
 import bg3Icon from "@assets/bg3_icon.png";
-import bg3FullIcon from "@assets/bg3_full_icon.png";
 import nightingaleIcon from "@assets/nightingale_icon.png";
 
 import { projectLinks } from "@data/links.ts";
 
 const projects = [
-    { title: "Baldur's Gate 3", role: "Junior Tools Programmer", icon: bg3Icon, link: projectLinks.bg3 },
-    { title: "Nightingale", role: "Systems Programmer Intern", icon: nightingaleIcon, link: projectLinks.nightingale },
-    { title: "Baldur's Gate 3", role: "Tools Programmer Intern", icon: bg3FullIcon, link: projectLinks.bg3 },
+    { title: "Baldur's Gate 3", icon: bg3Icon, link: projectLinks.bg3 },
+    { title: "Nightingale", icon: nightingaleIcon, link: projectLinks.nightingale },
 ]
 ---
 
@@ -18,7 +16,7 @@ const projects = [
   <div class="tw-grid tw-grid-cols-4 tw-gap-4 tw-max-w-sm tw-w-full tw-h-full">
     <!-- TODO: Might be worth making a ProjectCard svelte component, however, this is significantly easier because of the Astro image API-->
     {projects.map((project) =>
-      <a href={project.link} target="_blank" class="project-link tw-tooltip tw-tooltip-accent" data-tip={project.title + " - " + project.role}>
+      <a href={project.link} target="_blank" class="project-link tw-tooltip tw-tooltip-accent" data-tip={project.title}>
         <div class="tw-flex tw-items-center tw-justify-center tw-bg-accent tw-rounded-lg tw-shadow-md tw-aspect-square tw-p-4 tw-h-full tw-w-full">
           <Image src={project.icon} alt={project.title} loading="eager" class="project-image tw-object-contain tw-h-full tw-w-full">
         </div>
